arrgoCD/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "dev-argocd.bravo.com.vn"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtual-service
  namespace: argocd
spec:
  hosts:
    - "dev-argocd.bravo.com.vn"
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
